# DL_In_Modern_Cpp

./: .gitignore  CMakeLists.txt  README.md  hello_world.cpp  using_stat_distros.cpp
cmake/: fetch3Libs.cmake
include/: glorot.h  my_functions.h
src/: glorot.cpp  main.cpp  my_functions.cpp  using_algorithms.cpp  using_functional.cpp  using_numeric.cpp
tests/: CMakeLists.txt  glorot_tests.cpp  test_find_middle.cpp  test_my_functions.cpp
